deployment-dfd.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-echo-server-service
spec:
  selector:
    app: python-echo-server
  ports:
  - protocol: "TCP"
    port: 4444
    targetPort: 4444
  type: LoadBalancer

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-echo-server
spec:
  selector:
    matchLabels:
      app: python-echo-server
  replicas: 1
  template:
    metadata:
      labels:
        app: python-echo-server
    spec:
      containers:
      - name: python-echo-server
        image: echo-erver:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 4444
