deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-echo-server-service
spec:
  selector:
    app: python-echo-server
  ports:
  - protocol: "TCP"
    port: 4444
    targetPort: 4444
  type: NodePort

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-echo-server
spec:
  selector:
    matchLabels:
      app: python-echo-server  
  replicas: 1
  template:
    metadata:
      labels:
        app: python-echo-server
    spec:

      containers:
      - name: python-echo-server
        image: ndidocker/echo-erver:latest
        volumeMounts:
        - name: htm-files
          mountPath: htm
        imagePullPolicy: Always
        ports:
        - containerPort: 4444
     
      volumes:
        - name: htm-files
          configMap:
            name: config-map-vol

#index.html mapped into separate dir just for example as it was specified in a task; we already included it with a docker img
